cmake_minimum_required(VERSION 3.19)
project(competitve)

set(CMAKE_CXX_STANDARD 14)

add_executable(max_flow max_flow.cpp)
add_executable(rock_paper_scissors_fox rock_paper_scissors_fox.cpp)
add_executable(a_research_project a_research_project.cpp chocolate_bar.cpp)
add_executable(art_academy_0_prologue art_academy_0_prologue.cpp)
add_executable(DMOPC_Save_Nagato DMOPC_Save_Nagato.cpp)
add_executable(ccc_punchy ccc_punchy.cpp)
add_executable(water water.cpp)
add_executable(back_from_summer_winnies_orphans back_from_summer_winnies_orphans.cpp)
add_executable(back_to_school_barambe back_to_school_barambe.cpp)
add_executable(back_to_school_harambe back_to_school_harambe.cpp)
add_executable(back_to_school_HARAMBE_capital back_to_school_HARAMBE_capital.cpp)
add_executable(bruno_and_beads bruno_and_beads.cpp)
add_executable(bruno_and_tennis bruno_and_tennis.cpp)
add_executable(graph2p2 graph2p2.cpp)
add_executable(pursuit_of_knowledge pursuit_of_knowledge.cpp)
add_executable(sleigh_ride sleigh_ride.cpp)
add_executable(dmopc18c6p3 dmopc18c6p3.cpp)
add_executable(examprep examprep.cpp)
add_executable(ccc03s5 ccc03s5.cpp)
add_executable(usaco19decsilvp3 usaco19decsilvp3.cpp)
add_executable(bobs_histogram bobs_histogram.cpp)
add_executable(dmpg17s2 dmpg17s2.cpp)
add_executable(ucc_coding_competition_counterfeit_detection ucc_coding_competition_counterfeit_detection.cpp)
add_executable(ucc_coding_competition_emerald_exchange ucc_coding_competition_emerald_exchange.cpp)
add_executable(ucc_coding_competition_long_pizza ucc_coding_competition_long_pizza.cpp)
add_executable(dmopc_median_mark dmopc_median_mark.cpp)
add_executable(mock_ccc_a_square_problem mock_ccc_a_square_problem.cpp)
add_executable(woss woss.cpp)
add_executable(getting_snappy getting_snappy.cpp)
add_executable(polan_cannot_into_space polan_cannot_into_space.cpp)
add_executable(ccc_poetry ccc_poetry.cpp)
add_executable(tle_unlucky_numbers tle_unlucky_numbers.cpp)
add_executable(chocolate_bar chocolate_bar.cpp)
add_executable(ccc_crazy_fencing ccc_crazy_fencing.cpp)
add_executable(chicken_and_rabbit chicken_and_rabbit.cpp)
add_executable(bobs_hated_number_list bobs_hated_number_list.cpp)
add_executable(bobs_word_conversion bobs_word_conversion.cpp)
add_executable(bobs_array_modification bobs_array_modification.cpp)
add_executable(dwite_sum_of_primes dwite_sum_of_primes.cpp)
add_executable(a_factor_game a_factor_game.cpp)
add_executable(sum_of_primes_2 sum_of_primes_2.cpp)
add_executable(bobs_apple_fest bobs_apple_fest.cpp)
add_executable(dwite_prime_palindromes dwite_prime_palindromes.cpp)
add_executable(dwite_floppy_disk dwite_floppy_disk.cpp)
add_executable(postfix_notation postfix_notation.cpp)
add_executable(2spooky4me 2spooky4me.cpp)
add_executable(ccc_secret_instructions ccc_secret_instructions.cpp)
add_executable(dmopc_fujo_neko dmopc_fujo_neko.cpp)
add_executable(flip_the_switches flip_the_switches.cpp)
add_executable(tss_club_fair_2017_problem_b tss_club_fair_2017_problem_b.cpp)
add_executable(dmopc_systests dmopc_systests.cpp)
add_executable(dwite_number_of_factors dwite_number_of_factors.cpp)
add_executable(TEST TEST.cpp)
add_executable(ccc_high_tide_low_tide ccc_high_tide_low_tide.cpp)
add_executable(dwite_theres_an_essay_in_my_cdoe dwite_theres_an_essay_in_my_cdoe.cpp)
add_executable(bob_and_bus_stops bob_and_bus_stops.cpp)
add_executable(ccc21s3 ccc21s3.cpp)
add_executable(ccc_babbling_brooks ccc_babbling_brooks.cpp)
add_executable(count_number_of_pairs count_number_of_pairs.cpp)
add_executable(ecoo_railway_sort ecoo_railway_sort.cpp)
add_executable(dmopc_not_enough_personnel dmopc_not_enough_personnel.cpp)
add_executable(dmopc_conspicuous_cryptic_checklist dmopc_conspicuous_cryptic_checklist.cpp)
add_executable(hearth hearth.cpp)
add_executable(appleby_rectangles appleby_rectangles.cpp)
add_executable(usaco_acowdemia_1 usaco_acowdemia_1.cpp)
add_executable(cpc_aqt_and_fractions cpc_aqt_and_fractions.cpp)
add_executable(mockccc_spreadsheet_sorting mockccc_spreadsheet_sorting.cpp)
add_executable(usaco_uddered_but_not_herd usaco_uddered_but_not_herd.cpp)
add_executable(usaco_even_more_odd_photos usaco_even_more_odd_photos.cpp)
add_executable(usaco_just_stalling usaco_just_stalling.cpp)
add_executable(going_back_to_the_definitions going_back_to_the_definitions.cpp)
add_executable(ccc_prefix_to_postfix ccc_prefix_to_postfix.cpp)
add_executable(an_animal_contest_monkey_potato an_animal_contest_monkey_potato.cpp)
add_executable(mwc_towering_towers mwc_towering_towers.cpp)
add_executable(an_animal_contest_money_market an_animal_contest_money_market.cpp)
add_executable(usaco_comfortable_cows usaco_comfortable_cows.cpp)
add_executable(usaco_year_of_the_cow usaco_year_of_the_cow.cpp)
add_executable(back_to_school_letter_frequency back_to_school_letter_frequency.cpp)
add_executable(bobs_light_game bobs_light_game.cpp)
add_executable(CC3_summer_SUMMARY CC3_summer_SUMMARY.cpp)
add_executable(hardcore_grinding hardcore_grinding.cpp)
add_executable(nightmare-a-thon nightmare-a-thon.cpp)
add_executable(usaco_triangles usaco_triangles.cpp)
add_executable(champion_contest champion_contest.cpp)
add_executable(lil_jami lil_jami.cpp)
add_executable(CC3_P1 CC3_P1.cpp)
add_executable(CC3_P2 CC3_P2.cpp)
add_executable(CC3_P3 CC3_P3.cpp)
add_executable(CC3_P4 CC3_P4.cpp)
add_executable(CC3_P5 CC3_P5.cpp)
add_executable(primes_2 primes_2.cpp)
add_executable(CCC_gates CCC_gates.cpp)
add_executable(palindromic_integer_partition palindromic_integer_partition.cpp)
add_executable(usaco20jans1 usaco20jans1.cpp)
add_executable(dmopc_itami_and_cipher dmopc_itami_and_cipher.cpp)
add_executable(usaco_photoshoot usaco_photoshoot.cpp)
add_executable(AUC_P1 AUC_P1.cpp)
add_executable(secret_santa secret_santa.cpp)
add_executable(recursion recursion.cpp)
add_executable(dmopc_partial_game dmopc_partial_game.cpp)
add_executable(MWC_Love_Guru MWC_Love_Guru.cpp)
add_executable(arithmetic_or_geometric arithmetic_or_geometric.cpp)
add_executable(COCI_Perket COCI_Perket.cpp)
add_executable(common_divisor common_divisor.cpp)
add_executable(usaco_stuck_in_a_rut usaco_stuck_in_a_rut.cpp)
add_executable(ccc_bananas ccc_bananas.cpp)
add_executable(ccc_pattern_generator ccc_pattern_generator.cpp)
add_executable(NOI_Maintaining_a_Sequence NOI_Maintaining_a_Sequence.cpp)
add_executable(Another_Contest_Unnecessary_Trash_PUsh Another_Contest_Unnecessary_Trash_PUsh.cpp)
add_executable(USACO_Where_Am_I USACO_Where_Am_I.cpp)
add_executable(vm7wc_jayden_studies_trees vm7wc_jayden_studies_trees.cpp)
add_executable(USACO_Livestock_Lineup USACO_Livestock_Lineup.cpp)
add_executable(vm7wc_tests_or_test_cases vm7wc_tests_or_test_cases.cpp)
add_executable(CCC_Chanes_of_winning CCC_Chanes_of_winning.cpp)
add_executable(usaco_race usaco_race.cpp)
add_executable(coci_utrka coci_utrka.cpp)
add_executable(occ_rimurus_number_game occ_rimurus_number_game.cpp)
add_executable(coci_traktor coci_traktor.cpp)
add_executable(ecoo_online_shopping ecoo_online_shopping.cpp)
add_executable(Awkward_Number Awkward_Number.cpp)
add_executable(rimurus_problem_trees rimurus_problem_trees.cpp)
add_executable(shortest_path shortest_path.cpp)
add_executable(ccc_knight_hop ccc_knight_hop.cpp)
add_executable(dmopc_bosses dmopc_bosses.cpp)
add_executable(ccc_who_is_taller ccc_who_is_taller.cpp)
add_executable(dmopc_crossing_field dmopc_crossing_field.cpp)
add_executable(can_shahir_even_get_there can_shahir_even_get_there.cpp)
add_executable(breadth_first_search_test breadth_first_search_test.cpp)
add_executable(ccc_strategic_bombing ccc_strategic_bombing.cpp)
add_executable(DWITE_running_in_circles DWITE_running_in_circles.cpp)
add_executable(dmopc_afk dmopc_afk.cpp)
add_executable(ccc_maze ccc_maze.cpp)
add_executable(dmopc_mimi_and_primes dmopc_mimi_and_primes.cpp)
add_executable(tsoc_giant_ants tsoc_giant_ants.cpp)
add_executable(board_games board_games.cpp)
add_executable(directed_acyclic_graph directed_acyclic_graph.cpp)
add_executable(bobs_box bobs_box.cpp)
add_executable(candy candy.cpp)
add_executable(maxium_sum_of_two_numbers maxium_sum_of_two_numbers.cpp)
add_executable(bobs_escape_maze bobs_escape_maze.cpp)
add_executable(bobs_shuffling_sequence bobs_shuffling_sequence.cpp)
add_executable(bobs_grouping_plan bobs_grouping_plan.cpp)
add_executable(count_odd_digit_numbers count_odd_digit_numbers.cpp)
add_executable(nccc9s1 nccc9s1.cpp)
add_executable(anoisyclass anoisyclass.cpp)
add_executable(TOPOSORT TOPOSORT.cpp)
add_executable(ds2 ds2.cpp)
add_executable(doubling_or_losing doubling_or_losing.cpp)
add_executable(treats_collection treats_collection.cpp)
add_executable(bobs_trip_plan bobs_trip_plan.cpp)
add_executable(bobs_team bobs_team.cpp)
add_executable(birthday_game birthday_game.cpp)
add_executable(power_plan power_plan.cpp)
add_executable(uscaoDec2021B1 uscaoDec2021B1.cpp)
add_executable(uscaoDec2021B2 uscaoDec2021B2.cpp)
add_executable(uscaoDec2021B3 uscaoDec2021B3.cpp)
add_executable(ccc20s2 ccc20s2.cpp)
add_executable(wc18c4s1 wc18c4s1.cpp)
add_executable(pathfind pathfind.cpp)
add_executable(graph2p1 graph2p1.cpp)
add_executable(dwite10c4p4 dwite10c4p4.cpp)
add_executable(deathgun deathgun.cpp)
add_executable(oly21practice91 oly21practice91.cpp)
add_executable(usaco21decs3 usaco21decs3.cpp)
add_executable(sssp sssp.cpp)
add_executable(vmss7wc16c3p3 vmss7wc16c3p3.cpp)
add_executable(ccc09s4 ccc09s4.cpp)
add_executable(vmss15c1p4 vmss15c1p4.cpp)